<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchGroupVideoCall"
        android:icon="@drawable/ic_videocall"
        android:title="@string/group_video_call"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/todo"
        android:title="@string/time_table"
        app:showAsAction="never" />

    <item
        android:id="@+id/newsImage"
        android:title="@string/news"
        app:showAsAction="never" />

    <item
        android:id="@+id/books"
        android:title="@string/books"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>