<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".news.NewsDetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarNewsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:title="News Details" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/readFullNews"
        android:layout_below="@+id/toolbarNewsDetails">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/newsDetailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/news"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@color/bluish_black" />

            <TextView
                android:id="@+id/newsDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsDetailImage"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/title"
                android:textColor="@color/bluish_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newsDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsDetailTitle"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/sub_description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/newsDetailContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsDetailDescription"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/readFullNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/read_full_news"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp" />

</RelativeLayout>