<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <View
            android:id="@+id/viewColorTagBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/book"
                android:layout_width="125dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/book_title"
                android:src="@color/bluish_black" />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/book"
                android:padding="4dp"
                android:text="@string/book_title"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookTitle"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/book"
                android:padding="4dp"
                android:text="@string/publisher"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pageCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/publisher"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/book"
                android:padding="4dp"
                android:text="@string/page_count"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pageCount"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:padding="4dp"
                android:text="@string/date"
                android:textColor="@color/bluish_black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>