<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".todolist.TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:elevation="10dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="New Task" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/task_title"
                android:textColor="@color/baby_pink"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInpLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/baby_pink"
                app:hintTextColor="@color/baby_pink">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_task_title"
                    android:inputType="textCapWords"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/what_is_to_be_done"
                android:textColor="@color/baby_pink"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskInpLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/baby_pink"
                app:hintTextColor="@color/baby_pink">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/enter_your_task"
                    android:lines="3"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/set_reminder_date_and_time"
                android:textColor="@color/baby_pink"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/baby_pink"
                app:hintTextColor="@color/baby_pink">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_date_range"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/baby_pink"
                    android:focusable="false"
                    android:hint="@string/set_date"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeInptLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:boxStrokeColor="@color/baby_pink"
                app:hintTextColor="@color/baby_pink">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_access_time"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/baby_pink"
                    android:focusable="false"
                    android:hint="@string/set_time"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/imgAddCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/baby_pink"
                    android:contentDescription="@drawable/ic_playlist_add"
                    android:src="@drawable/ic_playlist_add" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save_task"
                app:backgroundTint="@color/baby_pink"
                app:cornerRadius="25dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>